# prompting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  new.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  startup.sh
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build.yml  pre-commit.yml  release.yml
docker/: .dockerignore  Dockerfile
notebooks/: minimal enclosing circle.py
prompting/: app.py  teste.tsx
