[project]
name = "prompting"
version = "0.1.0"
description = "Interactive application for learning legal-focused LLM prompting techniques"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arthur Souza Rodrigues", email = "arthrod@umich.edu"},
]
requires-python = ">=3.12"
dependencies = [
    "clarabel>=0.10.0",
    "cvxpy-base>=1.6.2",
    "httpx>=0.28.1",
    "kaleido>=0.2.1",
    "marimo>=0.11.17",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/arthrod/prompting"
"Bug Tracker" = "https://github.com/arthrod/prompting/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "COM", "C4", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PD", "PGH", "PL", "TRY", "FLY", "PERF"]
ignore = ["E203", "B008", "ANN101", "ANN102", "ANN401"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompting"]
