[project]
name = "prompting"
version = "0.1.0"
description = "Interactive application for learning legal-focused LLM prompting techniques"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arthur Souza Rodrigues", email = "arthrod@umich.edu"},
]
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "marimo==0.13.7",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.9"
]
#[project.optional-dependencies]
#dev = [
#    "ruff>=0.3.0",
#    "pytest>=8.0.0",
#    "pytest-cov>=5.0.0",
#]

[project.urls]
"Homepage" = "https://prompting.synthetic.lawyer"
"Bug Tracker" = "https://github.com/arthrod/prompting/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "COM", "C4", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PD", "PGH", "PL", "TRY", "FLY", "PERF"]
ignore = ["E203", "B008", "ANN101", "ANN102", "ANN401"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompting"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
